--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,64 @@
-.App {
+.todo{
+  background: #eeeeee;
+  height: 100vh;
+  padding-top: 100px;
+}
+
+.todo__container{
+  padding: 10px;
+  margin: 0 auto;
+  width: 500px;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.todo__input{
+  border: none;
+  border-bottom: 1px solid #c0c0c0;
+  outline: none;
+  color: #000;
+  font-size: 16px;
+  background: transparent;
+  display: inline-block;
+  margin: 0 10px;
+  width: 250px;
+  padding: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.todo__input:focus{
+  outline: none;
+  border-bottom: 1px solid #888888;
 }
 
-.App-link {
-  color: #61dafb;
+.todo__button{
+  border: none;
+  box-shadow: none;
+  background: rgb(7, 133, 133);
+  color: #fff;
+  font-size: 16px;
+  padding: 10px 20px;
+  transition: .2s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todo__button:hover{
+  background: rgb(6, 114, 114);
+  cursor: pointer;
+}
+.todo__button:focus{
+  outline: none;
+}
+
+.todoList li{
+    width: 100%;
+    padding: 10px;
+    color: #fff;
+    font-weight: bold;
+    font-size: 14px;
+    background: #705b69;
+    list-style: none;
+    margin: 10px 0;
+}
+
+.todoList li:hover{
+  background: #9c5653;
+  cursor: pointer;
 }
